--- a/demo-sb-restapi/src/main/resources/application.yml
+++ b/demo-sb-restapi/src/main/resources/application.yml
@@ -8,8 +8,14 @@ spring:
     driverClassName: "org.postgresql.Driver"
     url: "jdbc:postgresql://127.0.0.1:5432/db_bc2408"
     username: "postgres"
-    password: "admin1234"
+    password: "Cg54499696"
   jpa:
     show-sql: true
     hibernate.ddl-auto: create
+
 # Custom variables
+api:
+  jph:
+    domain: "jsonplaceholder.typicode.com"
+    endpoints:
+      users: "/users" 
