--- a/demo-sb-restapi/src/main/resources/application.yml
+++ b/demo-sb-restapi/src/main/resources/application.yml
@@ -5,9 +5,13 @@ server:
 # pre-defined variables
 spring:
   datasource:
-    driverClassName: "org.postgresql.Driver"
-    url: "jdbc:postgresql://127.0.0.1:5432/db_bc2408"
-    username: "postgres"
+     # driverClassName: "org.postgresql.Driver"
+    # url: "jdbc:postgresql://127.0.0.1:5432/db_bc2408"
+    # username: "postgres"
+    # password: "admin1234"
+    driverClassName: "com.mysql.jdbc.Driver"
+    url: "jdbc:mysql://127.0.0.1:3306/BOOTCAMP_2408"
+    username: "root"
     password: "Cg54499696"
   jpa:
     show-sql: true
