--- a/bcforum/pom.xml
+++ b/bcforum/pom.xml
@@ -9,10 +9,10 @@
     <version>3.3.4</version>
     <relativePath /> <!-- lookup parent from repository -->
   </parent>
-  <groupId>com.bootcamp.demo</groupId>
-  <artifactId>bc-sb-jph-ex1</artifactId>
+  <groupId>com.example.bcforum</groupId>
+  <artifactId>bcforum</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>bc-sb-jph-ex1</name>
+  <name>bcforum</name>
   <description>Demo project for Spring Boot</description>
   <url />
   <licenses>
@@ -30,11 +30,14 @@
   <properties>
     <java.version>17</java.version>
   </properties>
+
   <dependencies>
+    <!-- getmapping web layer -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-devtools</artifactId>
@@ -46,10 +49,28 @@
       <artifactId>lombok</artifactId>
       <optional>true</optional>
     </dependency>
+
+    <!-- Include Junit5 -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
+    </dependency>
+
+    <!-- JPA + PostgreSQL DB -->
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.mysql</groupId>
+      <artifactId>mysql-connector-j</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
   </dependencies>
 
