--- a/bcforum/pom.xml
+++ b/bcforum/pom.xml
@@ -72,6 +72,10 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-jdbc</artifactId>
+      </dependency>
   </dependencies>
 
   <build>
@@ -91,4 +95,6 @@
     </plugins>
   </build>
 
+
+  
 </project>
